--- a/episcea/css/style.css
+++ b/episcea/css/style.css
@@ -66,8 +66,9 @@ body {
 
 #page-header {
   height: 200px;
-  background: url('../img/image1.jpg');
-  background-position: 0 -360px;
+  background: url('../img/group-of-people-standing-indoors-large.jpg');
+  background-position: 0 -160px;
+  background-size: cover;
   background-attachment: fixed;
   color: #fff;
   border-bottom: 1px #eee solid;
